--- a/manual.po
+++ b/manual.po
@@ -1,19 +1,20 @@
 # F Wolff <friedel@translate.org.za>, 2010.
+# Khaled Hosny <khaledhosny@eglug.org>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-27 18:37+0200\n"
-"PO-Revision-Date: 2010-10-27 22:21+0200\n"
-"Last-Translator: F Wolff <friedel@translate.org.za>\n"
-"Language-Team: translate-discuss-af@lists.sourceforge.net\n"
+"PO-Revision-Date: 2010-10-27 23:12+0300\n"
+"Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
+"Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
 "&& n%100<=10 ? 3 : n%100>=11 ? 4 : 5;\n"
-"X-Generator: Virtaal 0.7.0-beta1\n"
+"X-Generator: Virtaal 0.6.1\n"
 "X-Project-Style: default\n"
 
 msgid "Effecting change through localisation"
@@ -141,14 +142,16 @@ msgstr ""
 "المقالة الأصلية باللغة العربية في موقع عربآيز: "
 "<a0>http://wiki.arabeyes.org/تعريب_الأسماء</a0>"
 
-#, fuzzy
 msgid "Licence"
 msgstr "الترخيص"
 
+#, fuzzy
 msgid ""
 "This book is licensed under the Creative Commons licence called “Attribution "
 "Non-Commercial Share Alike”:"
 msgstr ""
+"يُرخص هذا الكتاب برخصة المشاع الإبداعي “نسب المصنَّف، غير تجاري، الترخيص "
+"بالمثل”:"
 
 msgid "http://creativecommons.org/licenses/by-nc-sa/3.0"
 msgstr "http://creativecommons.org/licenses/by-nc-sa/3.0"
