--- a/manual.po
+++ b/manual.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-27 18:37+0200\n"
-"PO-Revision-Date: 2010-10-28 14:51+0300\n"
+"PO-Revision-Date: 2010-10-29 01:53+0300\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
@@ -202,31 +202,31 @@ msgid "9"
 msgstr "9"
 
 msgid "Chapter 3: Before you start"
-msgstr ""
+msgstr "الفصل الثالث: قبل أن تبدأ"
 
 msgid "12"
-msgstr ""
+msgstr "12"
 
 msgid "The tools that we’ll use"
-msgstr ""
+msgstr "الأدوات التي سنستخدمها"
 
 msgid "Viewing your language"
-msgstr ""
+msgstr "عرض لغتك"
 
 msgid "Typing your language"
-msgstr ""
+msgstr "كتابة لغتك"
 
 msgid "13"
-msgstr ""
+msgstr "13"
 
 msgid "Codes and locales – initial support for your language"
-msgstr ""
+msgstr "الرموز والمحليات -- الدعم الأولي للغتك"
 
 msgid "Useful extras"
-msgstr ""
+msgstr "إضافيات مفيدة"
 
 msgid "14"
-msgstr ""
+msgstr "14"
 
 msgid "Chapter 4: Style"
 msgstr ""
@@ -1106,7 +1106,7 @@ msgstr ""
 "النصوص وحدها."
 
 msgid "Before you start"
-msgstr ""
+msgstr "قبل أن تبدأ"
 
 msgid ""
 "There are many tools that you could use for translation. It would be "
@@ -1115,6 +1115,9 @@ msgid ""
 "to help localisers work more productively, manage their teams better, and "
 "increase quality."
 msgstr ""
+"الأدوات التي يمكن استخدامها للترجمة كثيرة ولا نستطيع التطرق إليها كلها. لذا "
+"سيكون أغلب الشرح عن بوتل وفرتال، فكلتاهما طورتا لزيادة إنتاجية المترجمين "
+"ومساعدتهم على إدارة فرقهم وتحسين الجودة."
 
 msgid ""
 "<f0>Pootle</f0> is a popular web-based system for translation and "
@@ -1124,9 +1127,13 @@ msgid ""
 "work, casual contributions, and translation sprints (Translate@thons). Visit "
 "the official Pootle server to see what it is all about:"
 msgstr ""
+"<f0>بوتل</f0> نظام للترجمة وإدارتها عبر الوب، تستخدمه كثير من المشاريع الحرة "
+"لإدارة عملية التوطين، وبه عدة خصائص للمساعدة في مراجعة الترجمة وتنظيم عمل "
+"الفريق. وهو مناسب للعمل الجماعي، وللمساهمين غير المتمرسين، ولماراثونات "
+"الترجمة. راجع صفحة بوتل الرسمية للاطلاع أكثر على خصائصه:"
 
 msgid "http://pootle.locamotion.org/"
-msgstr ""
+msgstr "http://pootle.locamotion.org/"
 
 msgid ""
 "While online translation is useful, we realise that internet connectivity is "
@@ -1136,9 +1143,13 @@ msgid ""
 "quality. Installation instructions and more information is available on the "
 "Virtaal website:"
 msgstr ""
+"ومع أن الترجمة عبر الوب مفيدة إلا أن توفر اتصال جيد بالإنترنت ما يزال عائقا "
+"أمام الكثيرين. <f0>فِرْتَال</f0> برنامج ترجمة يعمل على حاسوبك حتى لو لم تكن "
+"متصلا بالإنترنت، ويوفر الكثير من الخصائص لزيادة الإنتاجية مع المحافظة على "
+"الجودة. تتوفر تعليمات التثبيت والمزيد من المعلومات على موقع فرتال:"
 
 msgid "http://virtaal.org/"
-msgstr ""
+msgstr "http://virtaal.org/"
 
 msgid ""
 "You don’t need to choose between these two tools – they complement each "
@@ -1152,6 +1163,14 @@ msgid ""
 "translation with colour highlighting of important things, and integration "
 "with helpful resources if you have an internet connection."
 msgstr ""
+"لا تحتاج للاختيار بين هاتين الأداتين إذ تكمل إحداهما الأخرى، فالمشاريع "
+"المستضافة على بوتل يمكن ترجمتها دون إنترنت باستخدام فرتال ثم رفع الملفات "
+"المترجمة إلى بوتل. قسم “<bf0>أدوات التوطين</bf0>” ص <bf1>39</bf1> يشرح هاتين "
+"الأداتين بتفصيل أكثر. الكثير من أقسام هذا الكتاب تتحدث عن خصائص معينة في "
+"هاتين الأداتين لذا من المحبذ تثبيت فرتال وتسجيل حساب في أحد خواديم بوتل "
+"ليمكنك اتباع التعليمات الواردة في الكتاب. سيقدم فرتال العون الأكبر أثناء "
+"الترجمة عبر تلوين الأجزاء المهمة لإبرازها، والتكامل مع الكثير من الخدمات "
+"المساعدة إذا كنت متصلا بالإنترنت."
 
 msgid ""
 "Both these programs are built on top of the <f0>Translate Toolkit</f0><f1> – "
@@ -1160,9 +1179,13 @@ msgid ""
 "therefore won’t be discussed much in the book. Installation instructions and "
 "more information is available on the website of the Translate Toolkit:</f1>"
 msgstr ""
+"بنيت كلتا الأداتين على <f0>عُدّة الترجمة</f0> التي تجمع عُدّة قوية من "
+"الأدوات الصغيرة لمساعدة المترجمين. تشغل أدوات عدة الترجمة من سطر الأوامر "
+"ولذا لن نتطرق إليها كثيرا في هذا الكتاب. تتوفر تعليمات التثبيت والمزيد من "
+"المعلومات على موقع عدة الترجمة:"
 
 msgid "http://translate.sourceforge.net/wiki/toolkit/index"
-msgstr ""
+msgstr "http://translate.sourceforge.net/wiki/toolkit/index"
 
 msgid ""
 "Before you can do any work, you need to ensure that you can view your "
@@ -1176,6 +1199,13 @@ msgid ""
 "called Unicode fonts. You can consult the Unicode font guide: "
 "<a0>http://www.unifont.org/fontguide/</a0>"
 msgstr ""
+"قبل أن تبدأ في العمل تأكد أنك تستطيع عرض لغتك بشكل سليم على شاشة الحاسوب. لم "
+"تعد هذه مشكلة لكثير من اللغات وكل ما تحتاجه هو التحقق من تركيب الخطوط "
+"المطلوبة على حاسوبك. يمكنك مراجعة صفحة ويكيبيديا بلغتك أو إحدى الصحف المحلية "
+"على الإنترنت لتتأكد أن كل الحروف تظهر بشكل سليم، وإذا ظهرت أي مشاكل فقد تجد "
+"في هذه المواقع روابط إلى الخطوط المطلوبة وتعليمات لطريقة عرض لعتك على "
+"الشاشة. من المهم الانتباه إلى أنك تحتاج إلى ما يعرف بخطوط يونيكود، ويمكنك "
+"مراجعة دليل خطوط يونيكود: <a0>http://www.unifont.org/fontguide/</a0>"
 
 msgid ""
 "You will probably spend most of your time in a translation program, so paste "
@@ -1184,6 +1214,10 @@ msgid ""
 "Virtaal) allow you to customise the font settings. You might want to adjust "
 "settings for the best display while working."
 msgstr ""
+"ولأنك غالبا ستقضي معظم الوقت مع برنامج الترجمة فعليك التأكد من أن النص يظهر "
+"سليما فيه وليس في متصفح الوب فقط، بنسخ بعض النص ولصقه داخل البرنامج. بعض "
+"التطبيقات (مثل فرتال) تتيح لك تطويع تضبيطات الخط لتحصل على أفضل عرض للنصوص "
+"يناسبك."
 
 msgid ""
 "Furthermore, if you don’t have the necessary font on your system by default, "
@@ -1196,6 +1230,14 @@ msgid ""
 "their computers.) Some emerging web technologies allow a website to supply "
 "a font, but you should probably not count on that."
 msgstr ""
+"وأيضا إذا لم يأت نظام التشغيل محملا بالخطوط التي تحتاجها لغتك فغالبا ستكون "
+"الحال نفسها مع مستخدمي البرمجيات المترجمة، ولذا عليك التأكد من وجود تعليمات "
+"واضحة لتثبيت الخطوط الإضافية تناسب مختلف أنظمة التشغيل. ضع في الاعتبار أن "
+"المستخدمين لن يستطيعوا قراءة التعليمات المكتوبة بلغتهم إذا لم تكن لديهم "
+"الخطوط المطلوبة، إلا إذا نشرت التعليمات في ملف PDF مضمنة فيه الخطوط المناسبة "
+"(ولهذا لن يحتاج المستخدمين لوجود الخطوط عند قراءة الملف). بعض تقنيات الوب "
+"الحديثة تتيح للمواقع توفير الخطوط المطلوبة لعرض النص على الوب دون أن يحتاج "
+"المستخدم تثبيتها بنفسه، لكن لا يمكن الاعتماد على هذا حاليا."
 
 msgid ""
 "In some cases software can be distributed with fonts to ensure that your "
@@ -1203,6 +1245,8 @@ msgid ""
 "will be able to tell you if it is possible to distribute fonts with their "
 "software."
 msgstr ""
+"في بعض الحالات يمكن توزيع الخطوط مع البرنامج لضمان عرض اللغة بشكل صحيح، ناقش "
+"هذا مع المطورين وسيعلمونك بإمكانية ذلك أو عدمه."
 
 msgid ""
 "Now that you are able to view your language on screen, it is important to "
@@ -1211,12 +1255,19 @@ msgid ""
 "language. Make sure that you know how to type all the characters of your "
 "language that you will need."
 msgstr ""
+"والآن بعد أن استطعت عرض لغتك على الحاسوب بشكل صحيح، عليك أن تتحقق من إمكانية "
+"إدخالها إلى الحاسوب أيضا. في الأغلب ستستطيع اختيار تخطيط لوحة الملفات أو "
+"طريقة الإدخال الصحيحة من مركز إعدادات نظام التشغيل. تأكد من أنك تستطيع كتابة "
+"كل الحروف التي تحتاجها في لغتك."
 
 msgid ""
 "If you are not yet used to typing in your language, it might be worthwhile "
 "to practice to improve your speed. The faster you can type, the more work "
 "you can do, and the more you will enjoy translation."
 msgstr ""
+"إذا لم تكن معتادا على الكتابة بلغة على لوحة المفاتيح فقد يكون من المفيد "
+"التمرن على ذلك لتحسين سرعتك، إذ كلما كتبت أسرع كلما أنجزت عملا أكثر واستمتعت "
+"بالترجمة أكثر."
 
 msgid ""
 "Whenever you contribute the first translation or support for your language "
@@ -1231,9 +1282,15 @@ msgid ""
 "language codes when no two letter code exists. These codes come from a "
 "standard called ISO 639. More information is available on Wikipedia:"
 msgstr ""
+"عندما تشارك بأول ترجمة أو دعم للغتك في برنامج تحتاج لتحديد لغتك إلى المطورين "
+"بدقة. تذكر أن تستخدم الاسم الإنجليزي للغتك وضع في الاعتبار أن المطورين قد "
+"لا يعرفون الكثير عن لغتك. يستخدم في العادة رمز من حرفين أو ثلاثة يشير إلى كل "
+"لغة، فمثلا رمز الإنجليزية من حرفين هو ‘en’ والعربية ‘ar’، وعادة ما تستخدم "
+"المشاريع الحرة الرمز ذي الحرفين إن وجد وإلا فالرمز ذي الثلاث حروف. يحدد هذه "
+"الرموز معيار يسمى أيزو 639، ويمكن الاطلاع على معلومات أكثر عنه من ويكيبيديا:"
 
 msgid "http://en.wikipedia.org/wiki/ISO_639"
-msgstr ""
+msgstr "http://en.wikipedia.org/wiki/ISO_639"
 
 msgid ""
 "If your language is spoken in multiple countries, it might be customary to "
@@ -1246,6 +1303,12 @@ msgid ""
 "that your localisation is part of a set of different localisations for your "
 "language."
 msgstr ""
+"بعض اللغات التي تستخدم في أكثر من بلد تترجم ترجمة مختلفة لكل بلد، وفي هذه "
+"الحالة يُضاف رمز البلد إلى رمز اللغة، مقل ‘fr_CA’ للفرنسية الكندية أو "
+"‘en_GB’ للإنجليزية البريطانية. لاحظ أنه لا حاجة لتحديد رمز البلد إلا في حال "
+"وجود ترجمة مستقلة لكل بلد تستخدم فيه هذه اللغة، لذا لا تحدد رمز البلد إلا "
+"إذا كان مشروع البرمجية المترجمة يتطلب هذا أو كنت تعرف أن لغتك تترجم ترجمات "
+"مختلفة باختلاف البلد."
 
 msgid ""
 "For some applications to work correctly in your language, your operating "
@@ -1256,6 +1319,12 @@ msgid ""
 "supported on the system. In some cases, some software also maintain their "
 "own locale information in order not to rely on the operating system.</f1>"
 msgstr ""
+"بعد التطبيقات تحتاج إلى ما يُعرف باسم <f0>المحلية</f0> لتعمل بشكل سليم مع "
+"لغتك. المحلية هي إعدادات في نظام التشغيل توفر البرمجيات بمعلومات عن لغتك "
+"والتضبيطات المتعلقة بها مثل طريقة تنسيق التاريخ والوقت وطريقة كتابة الأرقام "
+"إلى غير ذلك. المحليات المتوفرة تحدد اللغات التي يدعمها نظام التشغيل. بعد "
+"التطبيقات تحتوي على محليات خاصة بها لكيلا تحتاج إلى الاعتماد على نظام "
+"التشغيل في هذا."
 
 msgid ""
 "For Linux and certain other software that require locales, you can create a "
@@ -1263,9 +1332,12 @@ msgid ""
 "want a locale for the project called “glibc”. This page provides more "
 "information:"
 msgstr ""
+"بالنسبة للينُكس وبعض البرمجيات الأخرى التي تحتاج إلى المحليات، يُمكن إنشاء "
+"المحلية إذا لم تكن موجودة. في حالة لينكس فالمشروع البرمجي الذي تُضاف إليه "
+"المحلية يسمى “glibc”، ويمكنك الاطلاع على مزيد من المعلومات من هذه الصفحة:"
 
 msgid "http://translate.sourceforge.net/wiki/guide/locales/glibc"
-msgstr ""
+msgstr "http://translate.sourceforge.net/wiki/guide/locales/glibc"
 
 msgid ""
 "Although not all applications on Linux require a glibc locale, many do, and "
@@ -1273,6 +1345,9 @@ msgid ""
 "language. Hundreds already exist, so most people wouldn’t need to worry "
 "about this."
 msgstr ""
+"بالرغم من أن بعض البرمجيات في لينُكس لا تحتاج إلى محلية glibc إلا أن من "
+"الأفضل في كل الأحوال إنشاء محلية إذا لم تكن موجودة للغتك. يوجد المئات من "
+"المحليات بالفعل، لذا أغلب الناس لا يحتاجون للاهتمام لهذا."
 
 msgid ""
 "With the previously mentioned things in place, you can localise almost any "
@@ -1280,28 +1355,33 @@ msgid ""
 "quality, or might make you more productive. See if you can find any of the "
 "following to help you during translation:"
 msgstr ""
+"بعد ضبط كل الأمور السابقة تستطيع توطين أي برنامج تقريبا، لكن هناك أدوات أخرى "
+"تساعدك في تحسين الجودة أو زيادة الإنتاجية. انظر إذا كنت تستطيع الحصول على "
+"أي من هذه الأشياء لمساعدتك في الترجمة:"
 
 msgid ""
 "spell checker – see if you have a working spell checker in your web browser "
 "(for online translation) or in Virtaal, depending on where you will do your "
 "work"
 msgstr ""
+"مدقق إملائي -- تحقق من وجود المدقق الإملائي وعمله في متصفح الوب (إذا كنت "
+"تترجم عبر الوب) أو في فرتال."
 
 msgid "rules of spelling, orthography or grammar for your language"
-msgstr ""
+msgstr "قواعد الإملاء والنحو في لغتك"
 
 msgid ""
 "bilingual dictionaries, especially related to the field you are translating "
 "in"
-msgstr ""
+msgstr "قواميس ثنائية اللغة خاصة في المجال الذي تترجمه"
 
 msgid "English dictionary"
-msgstr ""
+msgstr "قاموس إنجليزي"
 
 msgid ""
 "Even if these are only available online, they might help you when you get "
 "stuck."
-msgstr ""
+msgstr "وحتى لو لم تكن متوفرة إلا على الوب فقد تساعدك."
 
 msgid "Style"
 msgstr ""
