--- a/manual.po
+++ b/manual.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-27 18:37+0200\n"
-"PO-Revision-Date: 2010-10-29 01:53+0300\n"
+"PO-Revision-Date: 2010-11-01 17:32+0300\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
@@ -223,34 +223,34 @@ msgid "Codes and locales – initial support for your language"
 msgstr "الرموز والمحليات -- الدعم الأولي للغتك"
 
 msgid "Useful extras"
-msgstr "إضافيات مفيدة"
+msgstr "إضافات مفيدة"
 
 msgid "14"
 msgstr "14"
 
 msgid "Chapter 4: Style"
-msgstr ""
+msgstr "الفصل الرابع: الأسلوب"
 
 msgid "15"
-msgstr ""
+msgstr "15"
 
 msgid "Orthography"
-msgstr ""
+msgstr "نظام الكتابة"
 
 msgid "Grammatical style"
-msgstr ""
+msgstr "النحو"
 
 msgid "16"
-msgstr ""
+msgstr "16"
 
 msgid "Be true to the source text"
-msgstr ""
+msgstr "التزم بالنص الأصلي"
 
 msgid "17"
-msgstr ""
+msgstr "17"
 
 msgid "Be true to the target language"
-msgstr ""
+msgstr "ابتعد عن الترجمة الحرفية"
 
 msgid "Chapter 5: Terminology"
 msgstr ""
@@ -668,8 +668,8 @@ msgid ""
 "you do when using the translated software!"
 msgstr ""
 "من المهم الانتباه إلى أن المستند المترجَم عادة ما يقرأ بنفس التتابع من أوله "
-"إلى آخره على الصورة التي وضعه المترجم عليها، لكن مع البرمجيات لا يمكن معرفة "
-"على وجه الدقة ما الذي سيراه المستخدم وعلى أي ترتيب، إذ تختلف طريقة استخدام "
+"لآخره على الصورة التي وضعه المترجم عليها، لكن مع البرمجيات لا يمكن معرفة على "
+"وجه الدقة ما الذي سيراه المستخدم وعلى أي ترتيب، إذ تختلف طريقة استخدام "
 "البرنامج من شخص لآخر وقد يرى المستخدم الواجهة المترجمة في سياق غير الذي "
 "تراها أنت فيه."
 
@@ -691,9 +691,9 @@ msgid ""
 "questions or problems with the source text. Users and translators are also "
 "often in more direct contact, allowing feedback to reach you more directly."
 msgstr ""
-"عادة ما يتواصل المبرمجون والمترجمون في المشاريع الحرة بشكل مباشر، مما يتيح "
-"سرعة في الإجابة عن أي استفسارات أو مشاكل تتعلق بالنص الأصلي. والمستخدمين "
-"والمترجمين أكثر قربا مما يتيح تبادلا مباشرا للآراء."
+"عادة ما يكون التواصل مباشرا بين المبرمجين والمترجمين في المشاريع الحرة، مما "
+"يتيح سرعة في الإجابة عن أي استفسارات أو مشاكل تتعلق بالنص الأصلي. "
+"والمستخدمين والمترجمين أكثر قربا مما يتيح تبادلا مباشرا للآراء."
 
 msgid ""
 "Many FOSS projects are really welcoming to localisers, and realise that they "
@@ -785,8 +785,8 @@ msgid ""
 "projects, and hopefully, reach your goals faster or more successfully."
 msgstr ""
 "في مشروع Translate.org.za بجنوب أفريقيا أردنا أن تمكين الناس والارتقاء "
-"بلغاتهم، هذا ما قلناه لأنفسنا، لكننا في البداية لم نتخذ الطريق الأفضل لتحقيق "
-"هذا الهدف، فكنا نترجم البرمجيات التي نحبها بدلا من ترجمة البرمجيات التي قد "
+"بلغاتهم، أو هكذا كانت نيتنا، لكننا في البداية أخطأنا الطريق الأمثل لتحقيق "
+"هذا الهدف، فكنا نترجم البرمجيات التي نحبها بدلا من البرمجيات التي قد "
 "يستخدمها الناس أكثر. ولأننا لا نستطيع ترجمة كل شيء كان علينا الاختيار وتحديد "
 "الأولويات. كلما حددت أهدافك بدقة استطعت تحديد أولويات المشاريع المختلفة "
 "وتحقيق أهدافك أسرع أو بنجاح أفضل."
@@ -803,8 +803,8 @@ msgstr ""
 "محدودية الموارد المتاحة لك (سواء المتطوعين أو المال أو الوقت إلى غير ذلك) "
 "تحتم التخطيط لوسائل استدامة واستمرارية المشروع. فإذا أتيح المال سيكون عليك "
 "وضع ميزانية وملاحظة مدى الالتزام بها، وعليك أيضا حساب الوقت المستغرق لإنجاز "
-"العمل لتستطيع تنظيم الوقت بشكل أفضل. قسم “<bf0>الأولويات (عندما لا تستطيع "
-"عمل كل شيء)</bf0>” ص <bf1>52</bf1> يناقش بعضا من وسائل تقييم المشاريع وتحديد "
+"العمل لتستطيع تنظيم الوقت أفضل. قسم “<bf0>الأولويات (عندما لا تستطيع عمل كل "
+"شيء)</bf0>” ص <bf1>52</bf1> يناقش بعضا من وسائل تقييم المشاريع وتحديد "
 "أولوياتها."
 
 msgid ""
@@ -1054,9 +1054,9 @@ msgid ""
 msgstr ""
 "ستجد أن الكثير من التواصل في مشاريع البرمجيات الحرة يكون بالإنجليزية، لذا "
 "سيسهل عليك المشاركة في هذه المشاريع إذا كنت تجيد الإنجليزية، كما سيسهل عليك "
-"فهم النصوص الإنجليزية بشكل أفضل. وعندما تتواصل مع الآخرين بالإنجليزية حاول "
-"أن تشرح ما تريده بشكل واضح وأن تراجع النص قبل إرساله حتى لا يساء فهمه نتيجة "
-"أخطاء الإملاء وغيرها."
+"فهم النصوص الإنجليزية أفضل. وعندما تتواصل مع الآخرين بالإنجليزية حاول أن "
+"تشرح ما تريده بوضوح وأن تراجع النص قبل إرساله حتى لا يساء فهمه نتيجة أخطاء "
+"الإملاء وغيرها."
 
 msgid ""
 "However, there are many ways to help someone who doesn’t know English well. "
@@ -1067,13 +1067,12 @@ msgid ""
 "second language can still be valuable contributors – even if just for "
 "marketing and testing."
 msgstr ""
-"ومع هذا فهناك الكثير من الوسائل لمساعدة من لا يجيد الإنجليزية بشكل كاف، فبعض "
+"ومع هذا فهناك الكثير من الوسائل لمساعدة من لا يجيد الإنجليزية كفاية، فبعض "
 "البرامج (مثل بوتل) يمكن أن تعرض النص بلغة أخرى إضافية للمساعدة على فهم أفضل "
 "للنص، كما قد تساعد خدمات الترجمة الآلية في التواصل مع الآخرين بلغات لا "
 "تجيدها. ويمكن أيضا الاستفادة من الأشخاص الذين لا يعرفون أي لغات أجنبية في "
 "أمور مثل الترويج للبرمجيات المترجمة أو اختبارها."
 
-#, fuzzy
 msgid "Orientate yourself"
 msgstr "تعرف على ما تترجمه"
 
@@ -1355,7 +1354,7 @@ msgid ""
 "quality, or might make you more productive. See if you can find any of the "
 "following to help you during translation:"
 msgstr ""
-"بعد ضبط كل الأمور السابقة تستطيع توطين أي برنامج تقريبا، لكن هناك أدوات أخرى "
+"تستطيع توطين أي برنامج تقريبا بعد ضبط كل الأمور السابقة، لكن هناك أدوات أخرى "
 "تساعدك في تحسين الجودة أو زيادة الإنتاجية. انظر إذا كنت تستطيع الحصول على "
 "أي من هذه الأشياء لمساعدتك في الترجمة:"
 
@@ -1384,7 +1383,7 @@ msgid ""
 msgstr "وحتى لو لم تكن متوفرة إلا على الوب فقد تساعدك."
 
 msgid "Style"
-msgstr ""
+msgstr "الأسلوب"
 
 msgid ""
 "Any piece of writing will show some aspects of style. The original language "
@@ -1469,7 +1468,7 @@ msgid ""
 msgstr ""
 
 msgid "Examples"
-msgstr ""
+msgstr "أمثلة"
 
 msgid ""
 "Here are some examples from Northern Sotho where capital letters are only "
@@ -1479,85 +1478,85 @@ msgid ""
 msgstr ""
 
 msgid "English"
-msgstr ""
+msgstr "إنجليزي"
 
 msgid "Not good"
-msgstr ""
+msgstr "خطأ"
 
 msgid "Recommended"
-msgstr ""
+msgstr "صواب"
 
 msgid "Help"
-msgstr ""
+msgstr "Help"
 
 msgid "thušo"
-msgstr ""
+msgstr "thušo"
 
 msgid "Thušo"
-msgstr ""
+msgstr "Thušo"
 
 msgid "Save As…."
-msgstr ""
+msgstr "Save As…."
 
 msgid "Boloka E le..."
-msgstr ""
+msgstr "Boloka E le..."
 
 msgid "Boloka e le..."
-msgstr ""
+msgstr "Boloka e le..."
 
 msgid "Font Size"
-msgstr ""
+msgstr "Font Size"
 
 msgid "Bogolo Bja Fonte"
-msgstr ""
+msgstr "Bogolo Bja Fonte"
 
 msgid "Bogolo bja fonte"
-msgstr ""
+msgstr "Bogolo bja fonte"
 
 msgid "Online Help"
-msgstr ""
+msgstr "Online Help"
 
 msgid "Thušo ya Inthaneteng"
-msgstr ""
+msgstr "Thušo ya Inthaneteng"
 
 msgid "Thušo ya inthaneteng"
-msgstr ""
+msgstr "Thušo ya inthaneteng"
 
 msgid "Select All"
-msgstr ""
+msgstr "Select All"
 
 msgid "Kgetha Tšohle"
-msgstr ""
+msgstr "Kgetha Tšohle"
 
 msgid "Kgetha tšohle"
-msgstr ""
+msgstr "Kgetha tšohle"
 
 msgid "Print PDF File"
-msgstr ""
+msgstr "Print PDF File"
 
 msgid "gatiša faele ya pdf"
-msgstr ""
+msgstr "gatiša faele ya pdf"
 
 msgid "Gatiša faele ya PDF"
-msgstr ""
+msgstr "Gatiša faele ya PDF"
 
 msgid "Print Acrobat File"
-msgstr ""
+msgstr "Print Acrobat File"
 
 msgid "Gatiša Faele ya Acrobat"
-msgstr ""
+msgstr "Gatiša Faele ya Acrobat"
 
 msgid "Gatiša faele ya Acrobat"
-msgstr ""
+msgstr "Gatiša faele ya Acrobat"
 
 msgid "no selection"
-msgstr ""
+msgstr "no selection"
 
 msgid "Ga go kgetho"
-msgstr ""
+msgstr "Ga go kgetho"
 
 msgid "ga go kgetho"
-msgstr ""
+msgstr "ga go kgetho"
 
 msgid ""
 "Another area where guidelines for your team might help, is to ensure that "
